gdb 	PR exp/11803: 	* value.c (value_static_field): Use value_of_variable. gdb/testsuite 	PR exp/11803: 	* gdb.threads/tls.exp: Use C++. 	(check_thread_local): Use K::another_thread_local. 	* gdb.threads/tls.c (class K): New. 	(another_thread_local): Now a member of K. 	(spin): Update.  No longer K&R C.